--- a/visualization/app/codeCharta/ui/heightSettingsPanel/heightSettingsPanel.component.scss
+++ b/visualization/app/codeCharta/ui/heightSettingsPanel/heightSettingsPanel.component.scss
@@ -1,2 +1,32 @@
 height-settings-panel-component {
+	background: #ffffff;
+	border: 1px solid #b5b5b5;
+	border-top: none;
+	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+	padding: 6px;
+	position: relative;
+	overflow: visible;
+	font-size: 0.9em;
+	text-align: left;
+	width: 240px;
+
+	md-slider-container {
+		position: relative;
+		.slider-title {
+			position: absolute;
+			top: 0;
+			font-size: 0.8em;
+			color: grey;
+			left: 4px;
+		}
+		.margin-input {
+			height: 24px;
+		}
+	}
+
+	.bottom-row {
+		align-items: center;
+		display: flex;
+		justify-content: space-between;
+	}
 }
